[gd_scene load_steps=40 format=3 uid="uid://vsb6jaxc8r4h"]

[ext_resource type="Script" path="res://main.gd" id="1_axl5g"]
[ext_resource type="PackedScene" uid="uid://227dp64kpl50" path="res://level_tile_map.tscn" id="2_y4joo"]
[ext_resource type="Script" path="res://canvas_darkness.gd" id="3_882hj"]
[ext_resource type="PackedScene" uid="uid://cghkc20j83gko" path="res://player_character.tscn" id="3_dbkvd"]
[ext_resource type="Texture2D" uid="uid://gmccq3yx4riv" path="res://textures/2d_lights_and_shadows_neutral_point_light.webp" id="4_5b2hw"]
[ext_resource type="Script" path="res://gui.gd" id="6_outks"]
[ext_resource type="Texture2D" uid="uid://d4nu57ok18t2n" path="res://textures/ArrowButtons.png" id="7_yur7r"]
[ext_resource type="Script" path="res://arrow_button.gd" id="8_tkmkt"]
[ext_resource type="Script" path="res://move_ui_control.gd" id="9_btfos"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kus0f"]
atlas = ExtResource("7_yur7r")
region = Rect2(1161, 201, 83, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_422ib"]
atlas = ExtResource("7_yur7r")
region = Rect2(1353, 201, 83, 83)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_43ob5"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_vkuqj"]
atlas = SubResource("CompressedTexture2D_43ob5")
region = Rect2(61, 1, 70, 88)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dvlhd"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_542yp"]
atlas = SubResource("CompressedTexture2D_dvlhd")
region = Rect2(253, 1, 70, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhnlr"]
atlas = ExtResource("7_yur7r")
region = Rect2(484, 9, 83, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibt6p"]
atlas = ExtResource("7_yur7r")
region = Rect2(676, 9, 83, 83)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_318rh"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_gyntl"]
atlas = SubResource("CompressedTexture2D_318rh")
region = Rect2(871, 60, 88, 71)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e81a8"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_as738"]
atlas = SubResource("CompressedTexture2D_e81a8")
region = Rect2(1063, 60, 88, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqsjs"]
atlas = ExtResource("7_yur7r")
region = Rect2(1251, 99, 84, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nsk"]
atlas = ExtResource("7_yur7r")
region = Rect2(1443, 99, 84, 84)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bifq0"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_sttv0"]
atlas = SubResource("CompressedTexture2D_bifq0")
region = Rect2(62, 294, 70, 90)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pj1ry"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_k410d"]
atlas = SubResource("CompressedTexture2D_pj1ry")
region = Rect2(254, 294, 70, 89)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0t6as"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_th37j"]
atlas = SubResource("CompressedTexture2D_0t6as")
region = Rect2(393, 290, 84, 85)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5hwxy"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_qnv76"]
atlas = SubResource("CompressedTexture2D_5hwxy")
region = Rect2(585, 290, 84, 85)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qt8rs"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_6c753"]
atlas = SubResource("CompressedTexture2D_qt8rs")
region = Rect2(769, 252, 89, 72)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ancs1"]
load_path = "res://.godot/imported/ArrowButtons.png-f8c85a48206ea2ed0e3d62ffbd150a63.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_pfim4"]
atlas = SubResource("CompressedTexture2D_ancs1")
region = Rect2(961, 252, 89, 72)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h768v"]
bg_color = Color(0.286275, 0.286275, 0.372549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id="Theme_btvtm"]
Button/colors/font_color = Color(0.957717, 0.965402, 0.97904, 1)
Button/colors/font_hover_color = Color(0.783522, 0.783524, 0.783524, 1)
Button/colors/font_pressed_color = Color(0.703808, 0.703808, 0.703808, 1)
Button/font_sizes/font_size = 32
Button/styles/hover = SubResource("StyleBoxFlat_h768v")
Button/styles/normal = SubResource("StyleBoxFlat_h768v")
Button/styles/pressed = SubResource("StyleBoxFlat_h768v")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwrod"]
bg_color = Color(0.804743, 0.804963, 0.847378, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tu6v"]
content_margin_left = 48.0
content_margin_top = 24.0
content_margin_right = 48.0
content_margin_bottom = 24.0
bg_color = Color(0.143769, 0.147263, 0.192779, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Main" type="Node" node_paths=PackedStringArray("player_camera")]
script = ExtResource("1_axl5g")
player_camera = NodePath("Level/PlayerCharacter/Camera2D")

[node name="1280x1280_Reference" type="ReferenceRect" parent="."]
offset_right = 1280.0
offset_bottom = 1280.0
border_color = Color(0.525101, 0.525101, 0.525101, 1)
border_width = 8.0

[node name="Level" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enabled = true

[node name="LevelTileMap" parent="Level" instance=ExtResource("2_y4joo")]
layer_0/tile_data = PackedInt32Array(1769582, 65537, 65536, 0, 0, 65536, 65536, 0, 65536, 131072, 0, 65536, 196608, 0, 65536, 262144, 0, 65536, 327680, 0, 65536, 393216, 0, 65536, 458752, 0, 65536, 524288, 0, 65536, 589824, 0, 65536, 1, 0, 65536, 65537, 0, 65536, 131073, 0, 65536, 196609, 0, 65536, 262145, 0, 65536, 327681, 0, 65536, 393217, 0, 65536, 458753, 0, 65536, 524289, 0, 65536, 589825, 0, 65536, 2, 0, 65536, 65538, 0, 65536, 131074, 0, 65536, 196610, 0, 65536, 262146, 0, 65536, 327682, 0, 65536, 393218, 0, 65536, 458754, 0, 65536, 524290, 0, 65536, 589826, 0, 65536, 3, 0, 65536, 65539, 0, 65536, 131075, 0, 65536, 196611, 0, 65536, 262147, 0, 65536, 327683, 0, 65536, 393219, 0, 65536, 458755, 0, 65536, 524291, 0, 65536, 589827, 0, 65536, 4, 0, 65536, 65540, 0, 65536, 131076, 0, 65536, 196612, 0, 65536, 262148, 0, 65536, 327684, 0, 65536, 393220, 0, 65536, 458756, 0, 65536, 524292, 0, 65536, 589828, 0, 65536, 5, 0, 65536, 65541, 0, 65536, 131077, 0, 65536, 196613, 0, 65536, 262149, 0, 65536, 327685, 0, 65536, 393221, 0, 65536, 458757, 0, 65536, 524293, 0, 65536, 589829, 0, 65536, 6, 0, 65536, 65542, 0, 65536, 131078, 0, 65536, 196614, 0, 65536, 262150, 0, 65536, 327686, 0, 65536, 393222, 0, 65536, 458758, 0, 65536, 524294, 0, 65536, 589830, 0, 65536, 7, 0, 65536, 65543, 0, 65536, 131079, 0, 65536, 196615, 0, 65536, 262151, 0, 65536, 327687, 0, 65536, 393223, 0, 65536, 458759, 0, 65536, 524295, 0, 65536, 589831, 0, 65536, 8, 0, 65536, 65544, 0, 65536, 131080, 0, 65536, 196616, 0, 0, 262152, 0, 65536, 327688, 0, 65536, 393224, 0, 65536, 458760, 0, 65536, 524296, 0, 65536, 589832, 0, 65536, 9, 0, 65536, 65545, 0, 65536, 131081, 0, 65536, 196617, 0, 65536, 262153, 0, 65536, 327689, 0, 65536, 393225, 0, 65536, 458761, 0, 65536, 524297, 0, 65536, 589833, 0, 65536, 10, 0, 65536, 65546, 0, 65536, 131082, 0, 65536, 196618, 0, 65536, 262154, 0, 65536, 327690, 0, 65536, 393226, 0, 65536, 458762, 0, 65536, 524298, 0, 65536, 589834, 0, 65536, 11, 0, 65536, 65547, 0, 65536, 131083, 0, 65536, 196619, 0, 65536, 262155, 0, 65536, 327691, 0, 65536, 393227, 0, 65536, 458763, 0, 65536, 524299, 0, 65536, 589835, 0, 65536, 12, 0, 65536, 65548, 0, 65536, 131084, 0, 65536, 196620, 0, 65536, 262156, 0, 65536, 327692, 0, 65536, 393228, 0, 65536, 458764, 0, 65536, 524300, 0, 65536, 589836, 0, 65536, 13, 0, 65536, 65549, 0, 65536, 131085, 0, 65536, 196621, 0, 65536, 262157, 0, 65536, 327693, 0, 65536, 393229, 0, 65536, 458765, 0, 65536, 524301, 0, 65536, 589837, 0, 65536, 14, 0, 65536, 65550, 0, 65536, 131086, 0, 65536, 196622, 0, 65536, 262158, 0, 65536, 327694, 0, 65536, 393230, 0, 65536, 458766, 0, 65536, 524302, 0, 65536, 589838, 0, 65536, 15, 0, 65536, 65551, 0, 65536, 131087, 0, 65536, 196623, 0, 65536, 262159, 0, 65536, 327695, 0, 65536, 393231, 0, 65536, 458767, 0, 65536, 524303, 0, 65536, 589839, 0, 65536, 16, 0, 65536, 65552, 0, 65536, 131088, 0, 65536, 196624, 0, 65536, 262160, 0, 65536, 327696, 0, 65536, 393232, 0, 65536, 458768, 0, 65536, 524304, 0, 65536, 589840, 0, 65536, 17, 0, 65536, 65553, 0, 65536, 131089, 0, 65536, 196625, 0, 65536, 262161, 0, 65536, 327697, 0, 65536, 393233, 0, 65536, 458769, 0, 65536, 524305, 0, 65536, 589841, 0, 65536, 18, 0, 65536, 65554, 0, 65536, 131090, 0, 65536, 196626, 0, 65536, 262162, 0, 65536, 327698, 0, 65536, 393234, 0, 65536, 458770, 0, 65536, 524306, 0, 65536, 589842, 0, 65536, 19, 0, 65536, 65555, 0, 65536, 131091, 0, 65536, 196627, 0, 65536, 262163, 0, 65536, 327699, 0, 65536, 393235, 0, 65536, 458771, 0, 65536, 524307, 0, 65536, 589843, 0, 65536, 655360, 0, 65537, 720896, 0, 65537, 786432, 0, 65537, 851968, 0, 65537, 917504, 0, 65537, 983040, 0, 65537, 1048576, 0, 65537, 1114112, 0, 65537, 1179648, 0, 65537, 1245184, 0, 65537, 655361, 0, 65537, 720897, 0, 65537, 786433, 0, 65537, 851969, 0, 65537, 917505, 0, 65537, 983041, 0, 65537, 1048577, 0, 65537, 1114113, 0, 65537, 1179649, 0, 65537, 1245185, 0, 65537, 655362, 0, 65537, 720898, 0, 65537, 786434, 0, 65537, 851970, 0, 65537, 917506, 0, 65537, 983042, 0, 65537, 1048578, 0, 65537, 1114114, 0, 65537, 1179650, 0, 65537, 1245186, 0, 65537, 655363, 0, 65537, 720899, 0, 65537, 786435, 0, 65537, 851971, 0, 65537, 917507, 0, 65537, 983043, 0, 65537, 1048579, 0, 65537, 1114115, 0, 65537, 1179651, 0, 65537, 1245187, 0, 65537, 655364, 0, 65537, 720900, 0, 65537, 786436, 0, 65537, 851972, 0, 65537, 917508, 0, 65537, 983044, 0, 65537, 1048580, 0, 65537, 1114116, 0, 65537, 1179652, 0, 65537, 1245188, 0, 65537, 655365, 0, 65537, 720901, 0, 65537, 786437, 0, 65537, 851973, 0, 65537, 917509, 0, 65537, 983045, 0, 65537, 1048581, 0, 65537, 1114117, 0, 65537, 1179653, 0, 65537, 1245189, 0, 65537, 655366, 0, 65537, 720902, 0, 65537, 786438, 0, 65537, 851974, 0, 65537, 917510, 0, 65537, 983046, 0, 65537, 1048582, 0, 65537, 1114118, 0, 65537, 1179654, 0, 65537, 1245190, 0, 65537, 655367, 0, 65537, 720903, 0, 65537, 786439, 0, 65537, 851975, 0, 65537, 917511, 0, 65537, 983047, 0, 65537, 1048583, 0, 65537, 1114119, 0, 65537, 1179655, 0, 65537, 1245191, 0, 65537, 655368, 0, 65537, 720904, 0, 65537, 786440, 0, 65537, 851976, 0, 65537, 917512, 0, 65537, 983048, 0, 65537, 1048584, 0, 65537, 1114120, 0, 65537, 1179656, 0, 65537, 1245192, 0, 65537, 655369, 0, 65537, 720905, 0, 65537, 786441, 0, 65537, 851977, 0, 65537, 917513, 0, 65537, 983049, 0, 65537, 1048585, 0, 65537, 1114121, 0, 65537, 1179657, 0, 65537, 1245193, 0, 65537, 655370, 0, 65537, 720906, 0, 65537, 786442, 0, 65537, 851978, 0, 65537, 917514, 0, 65537, 983050, 0, 65537, 1048586, 0, 65537, 1114122, 0, 65537, 1179658, 0, 65537, 1245194, 0, 65537, 655371, 0, 65537, 720907, 0, 65537, 786443, 0, 65537, 851979, 0, 65537, 917515, 0, 65537, 983051, 0, 65537, 1048587, 0, 65537, 1114123, 0, 65537, 1179659, 0, 65537, 1245195, 0, 65537, 655372, 0, 65537, 720908, 0, 65537, 786444, 0, 65537, 851980, 0, 65537, 917516, 0, 65537, 983052, 0, 65537, 1048588, 0, 65537, 1114124, 0, 65537, 1179660, 0, 65537, 1245196, 0, 65537, 655373, 0, 65537, 720909, 0, 65537, 786445, 0, 65537, 851981, 0, 65537, 917517, 0, 65537, 983053, 0, 65537, 1048589, 0, 65537, 1114125, 0, 65537, 1179661, 0, 65537, 1245197, 0, 65537, 655374, 0, 65537, 720910, 0, 65537, 786446, 0, 65537, 851982, 0, 65537, 917518, 0, 65537, 983054, 0, 65537, 1048590, 0, 65537, 1114126, 0, 65537, 1179662, 0, 65537, 1245198, 0, 65537, 655375, 0, 65537, 720911, 0, 65537, 786447, 0, 65537, 851983, 0, 65537, 917519, 0, 65537, 983055, 0, 65537, 1048591, 0, 65537, 1114127, 0, 65537, 1179663, 0, 65537, 1245199, 0, 65537, 655376, 0, 65537, 720912, 0, 65537, 786448, 0, 65537, 851984, 0, 65537, 917520, 0, 65537, 983056, 0, 65537, 1048592, 0, 65537, 1114128, 0, 65537, 1179664, 0, 65537, 1245200, 0, 65537, 655377, 0, 65537, 720913, 0, 65537, 786449, 0, 65537, 851985, 0, 65537, 917521, 0, 65537, 983057, 0, 65537, 1048593, 0, 65537, 1114129, 0, 65537, 1179665, 0, 65537, 1245201, 0, 65537, 655378, 0, 65537, 720914, 0, 65537, 786450, 0, 65537, 851986, 0, 65537, 917522, 0, 65537, 983058, 0, 65537, 1048594, 0, 65537, 1114130, 0, 65537, 1179666, 0, 65537, 1245202, 0, 65537, 655379, 0, 65537, 720915, 0, 65537, 786451, 0, 65537, 851987, 0, 65537, 917523, 0, 65537, 983059, 0, 65537, 1048595, 0, 65537, 1114131, 0, 65537, 1179667, 0, 65537, 1245203, 0, 65537)
layer_1/tile_data = PackedInt32Array(0, 0, 131072, 1, 0, 131072, 2, 0, 131072, 3, 0, 131072, 4, 0, 131072, 5, 0, 131072, 6, 0, 131072, 7, 0, 131072, 8, 0, 131072, 9, 0, 131072, 10, 0, 131072, 11, 0, 131072, 12, 0, 131072, 13, 0, 131072, 14, 0, 131072, 15, 0, 131072, 16, 0, 131072, 17, 0, 131072, 18, 0, 131072, 19, 0, 131072, 65555, 0, 131072, 131091, 0, 131072, 196627, 0, 131072, 262163, 0, 131072, 327699, 0, 131072, 393235, 0, 131072, 458771, 0, 131072, 524307, 0, 131072, 589843, 0, 131072, 65536, 0, 131072, 131072, 0, 131072, 196608, 0, 131072, 262144, 0, 131072, 327680, 0, 131072, 393216, 0, 131072, 458752, 0, 131072, 524288, 0, 131072, 589824, 0, 131072, 655360, 0, 131073, 720896, 0, 131073, 786432, 0, 131073, 851968, 0, 131073, 917504, 0, 131073, 983040, 0, 131073, 1048576, 0, 131073, 1114112, 0, 131073, 1179648, 0, 131073, 1245184, 0, 131073, 1245185, 0, 131073, 1245186, 0, 131073, 1245187, 0, 131073, 1245188, 0, 131073, 1245189, 0, 131073, 1245190, 0, 131073, 1245191, 0, 131073, 1245192, 0, 131073, 1245193, 0, 131073, 1245194, 0, 131073, 1245195, 0, 131073, 1245196, 0, 131073, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131073, 655379, 0, 131073, 720915, 0, 131073, 786451, 0, 131073, 851987, 0, 131073, 917523, 0, 131073, 983059, 0, 131073, 1048595, 0, 131073, 1114131, 0, 131073, 1179667, 0, 131073, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 65539, 0, 0, 131075, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 65540, 0, 0, 131076, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 458759, 0, 0, 524295, 0, 0, 262152, 0, 0, 458760, 0, 0, 524296, 0, 0, 262153, 0, 0, 458761, 0, 0, 524297, 0, 0, 262154, 0, 0, 327690, 0, 0, 458762, 0, 0, 262156, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 262157, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 589838, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 458768, 0, 0, 589840, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 65551, 0, 0, 131087, 0, 0, 65552, 0, 0, 131088, 0, 0, 65553, 0, 0, 65554, 0, 0, 655361, 0, 1, 720897, 0, 1, 786433, 0, 1, 851969, 0, 1, 917505, 0, 1, 983041, 0, 1, 1048577, 0, 1, 1114113, 0, 1, 1179649, 0, 1, 720898, 0, 1, 786434, 0, 1, 851970, 0, 1, 917506, 0, 1, 983042, 0, 1, 1048578, 0, 1, 1114114, 0, 1, 1179650, 0, 1, 983043, 0, 1, 1048579, 0, 1, 1114115, 0, 1, 1179651, 0, 1, 983044, 0, 1, 1048580, 0, 1, 1114116, 0, 1, 1179652, 0, 1, 917509, 0, 1, 983045, 0, 1, 1048581, 0, 1, 1114117, 0, 1, 1179653, 0, 1, 720902, 0, 1, 983046, 0, 1, 1048582, 0, 1, 1114118, 0, 1, 1179654, 0, 1, 720903, 0, 1, 786439, 0, 1, 851975, 0, 1, 1048583, 0, 1, 1114119, 0, 1, 1179655, 0, 1, 720904, 0, 1, 786440, 0, 1, 851976, 0, 1, 917512, 0, 1, 1114120, 0, 1, 1179656, 0, 1, 720905, 0, 1, 786441, 0, 1, 851977, 0, 1, 917513, 0, 1, 1114121, 0, 1, 1179657, 0, 1, 786442, 0, 1, 851978, 0, 1, 917514, 0, 1, 1114122, 0, 1, 1179658, 0, 1, 1179659, 0, 1, 655372, 0, 1, 720908, 0, 1, 1114124, 0, 1, 1179660, 0, 1, 655373, 0, 1, 720909, 0, 1, 786445, 0, 1, 851981, 0, 1, 917517, 0, 1, 1114125, 0, 1, 1179661, 0, 1, 655374, 0, 1, 720910, 0, 1, 786446, 0, 1, 851982, 0, 1, 917518, 0, 1, 1179662, 0, 1, 655375, 0, 1, 720911, 0, 1, 786447, 0, 1, 851983, 0, 1, 917519, 0, 1, 1179663, 0, 1, 655376, 0, 1, 720912, 0, 1, 786448, 0, 1, 851984, 0, 1, 917520, 0, 1, 1179664, 0, 1, 655377, 0, 1, 720913, 0, 1, 786449, 0, 1, 851985, 0, 1, 917521, 0, 1, 1179665, 0, 1, 655378, 0, 1, 720914, 0, 1, 786450, 0, 1, 851986, 0, 1, 917522, 0, 1, 983058, 0, 1, 1048594, 0, 1, 1114130, 0, 1, 1179666, 0, 1, 917516, 0, 1, 786444, 0, 1, 393226, 0, 0, 393233, 0, 0, 393232, 0, 0, 196623, 0, 0, 327697, 0, 0, 524302, 0, 0, 458766, 0, 0, 851971, 0, 1, 786437, 0, 1, 720899, 0, 1, 786438, 0, 1)
background_darkness = 0.3
border_darkness = 0.55

[node name="ExtraBackground1" type="ColorRect" parent="Level/LevelTileMap"]
visible = false
z_index = -2
custom_minimum_size = Vector2(3840, 1920)
offset_left = -1280.0
offset_top = -1280.0
offset_right = 2560.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.227451, 0.164706, 1)

[node name="ExtraBackground2" type="ColorRect" parent="Level/LevelTileMap"]
visible = false
z_index = -2
custom_minimum_size = Vector2(3840, 1920)
offset_left = -1280.0
offset_top = 640.0
offset_right = 2560.0
offset_bottom = 2560.0
grow_horizontal = 2
color = Color(0.101961, 0.172549, 0.203922, 1)

[node name="CanvasDarkness" type="CanvasModulate" parent="Level"]
visible = false
color = Color(0, 0, 0, 1)
script = ExtResource("3_882hj")

[node name="PlayerCharacter" parent="Level" node_paths=PackedStringArray("interactable_area") instance=ExtResource("3_dbkvd")]
position = Vector2(640, 160)
interactable_area = NodePath("FlippingParts/InteractableArea")

[node name="PointLight2D" type="PointLight2D" parent="Level/PlayerCharacter"]
shadow_enabled = true
texture = ExtResource("4_5b2hw")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Level/PlayerCharacter"]
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 1280
editor_draw_limits = true
metadata/_edit_lock_ = true

[node name="720x720_Reference" type="ReferenceRect" parent="Level/PlayerCharacter"]
visible = false
offset_left = -360.0
offset_top = -360.0
offset_right = 360.0
offset_bottom = 360.0
border_color = Color(1, 1, 1, 1)
border_width = 8.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("6_outks")

[node name="ArrowPad" type="Control" parent="GUI"]
process_mode = 1
modulate = Color(1, 1, 1, 0.486275)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -336.0
offset_right = 240.0
offset_bottom = -144.0
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="UpLeftButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.00001
offset_right = 91.0
offset_bottom = 91.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_kus0f")
texture_hover = SubResource("AtlasTexture_422ib")
script = ExtResource("8_tkmkt")

[node name="UpButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 61.0
offset_right = 131.0
offset_bottom = 88.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_vkuqj")
texture_hover = SubResource("AtlasTexture_542yp")
script = ExtResource("8_tkmkt")

[node name="UpRightButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 101.0
offset_top = 8.00001
offset_right = 184.0
offset_bottom = 91.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_lhnlr")
texture_hover = SubResource("AtlasTexture_ibt6p")
script = ExtResource("8_tkmkt")

[node name="RightButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 104.0
offset_top = 60.0
offset_right = 192.0
offset_bottom = 131.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_gyntl")
texture_hover = SubResource("AtlasTexture_as738")
script = ExtResource("8_tkmkt")

[node name="DownRightButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 100.0
offset_top = 99.0
offset_right = 184.0
offset_bottom = 183.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_tqsjs")
texture_hover = SubResource("AtlasTexture_i1nsk")
script = ExtResource("8_tkmkt")

[node name="DownButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 63.0
offset_top = 103.0
offset_right = 133.0
offset_bottom = 193.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_sttv0")
texture_hover = SubResource("AtlasTexture_k410d")
script = ExtResource("8_tkmkt")

[node name="DownLeftButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_left = 9.0
offset_top = 99.0
offset_right = 93.0
offset_bottom = 184.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_th37j")
texture_hover = SubResource("AtlasTexture_qnv76")
script = ExtResource("8_tkmkt")

[node name="LeftButton" type="TextureButton" parent="GUI/ArrowPad"]
layout_mode = 0
offset_top = 60.0
offset_right = 89.0
offset_bottom = 132.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
texture_normal = SubResource("AtlasTexture_6c753")
texture_hover = SubResource("AtlasTexture_pfim4")
script = ExtResource("8_tkmkt")

[node name="Form" type="Sprite2D" parent="GUI/ArrowPad"]
position = Vector2(96, 96)
texture = ExtResource("7_yur7r")
region_enabled = true
region_rect = Rect2(0, 384, 192, 192)

[node name="PauseButton" type="Button" parent="GUI"]
process_mode = 3
custom_minimum_size = Vector2(128, 92)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 27.0
offset_right = -24.0
offset_bottom = 119.0
grow_horizontal = 0
focus_mode = 0
theme = SubResource("Theme_btvtm")
theme_override_colors/font_color = Color(0.0974584, 0.0972819, 0.201224, 1)
theme_override_colors/font_pressed_color = Color(0.301957, 0.303076, 0.532351, 1)
theme_override_colors/font_hover_color = Color(0.173862, 0.173779, 0.328221, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_qwrod")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qwrod")
theme_override_styles/normal = SubResource("StyleBoxFlat_qwrod")
text = "Pause"

[node name="PauseMenu" type="PanelContainer" parent="GUI"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.5
offset_top = -72.0
offset_right = 325.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_btvtm")
theme_override_styles/panel = SubResource("StyleBoxFlat_1tu6v")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PauseMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="GUI/PauseMenu/HBoxContainer"]
custom_minimum_size = Vector2(144, 96)
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
text = "Resume
"

[node name="MoveUIButton" type="Button" parent="GUI/PauseMenu/HBoxContainer"]
custom_minimum_size = Vector2(144, 96)
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "Move UI
"

[node name="ExitButton" type="Button" parent="GUI/PauseMenu/HBoxContainer"]
custom_minimum_size = Vector2(144, 96)
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
text = "Exit"

[node name="MoveUIControl" type="Control" parent="GUI" node_paths=PackedStringArray("arrow_pad")]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("9_btfos")
arrow_pad = NodePath("../ArrowPad")

[node name="DoneButton" type="Button" parent="GUI/MoveUIControl"]
custom_minimum_size = Vector2(128, 92)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -46.0
offset_right = 64.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = SubResource("Theme_btvtm")
theme_override_colors/font_color = Color(0.0974584, 0.0972819, 0.201224, 1)
theme_override_colors/font_pressed_color = Color(0.301957, 0.303076, 0.532351, 1)
theme_override_colors/font_hover_color = Color(0.173862, 0.173779, 0.328221, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_qwrod")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qwrod")
theme_override_styles/normal = SubResource("StyleBoxFlat_qwrod")
text = "Done"

[connection signal="pressed" from="GUI/PauseButton" to="GUI" method="_on_pause_button_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/HBoxContainer/ResumeButton" to="GUI" method="_on_resume_button_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/HBoxContainer/MoveUIButton" to="GUI" method="_on_move_ui_button_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/HBoxContainer/ExitButton" to="GUI" method="_on_exit_button_pressed"]
[connection signal="pressed" from="GUI/MoveUIControl/DoneButton" to="GUI" method="_on_done_button_pressed"]
